# DataBridgesAPIClient

./: .gitignore  .gitlab-ci.yml  .release-please-manifest.json  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json  release-please-manifest.json  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: publish-s3.yml  python.yml  release-please.yml
.openapi-generator/: FILES
data_bridges_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  token.py
data_bridges_client/api/: __init__.py  commodities_api.py  commodity_units_api.py  currency_api.py  economic_data_api.py  global_outlook_api.py  hunger_hotspot_api.py  incubation_api.py  ipcch_api.py  market_prices_api.py  markets_api.py  rpme_api.py  surveys_api.py  xls_forms_api.py
docs/: CariAdm0ValuesDTO.md  CariAdm0ValuesDTOPagedResult.md  CariAdm1ValuesDTO.md  CariAdm1ValuesDTOPagedResult.md  CategoriesAndIndicatorsDTO.md  CommoditiesApi.md  CommodityUnitsApi.md  CurrencyApi.md  EconomicDataApi.md  ExtendedAlpsValueDto.md  ExtendedAlpsValueDtoPagedResult.md  GlobalOutlookApi.md  GlobalOutlookApiDto.md  GlobalOutlookCountryApiDto.md  GlobalOutlookRegionalApiDto.md  HungerHotSpotDataDTO.md  HungerHotSpotDataDTOPagedResult.md  HungerHotspotApi.md  IncubationApi.md  IpcHistoricalDatumDto.md  IpcHistoricalDatumDtoPagedResult.md  IpcchAndEquivalentPeaksDTO.md  IpcchAndEquivalentPeaksDTOPagedResult.md  IpcchApi.md  IpcchBaseDto.md  IpcchBaseDtoPagedResult.md  IpcchPeaksDto.md  IpcchPeaksDtoPagedResult.md  ListItemDto.md  MarketPricesApi.md  MarketsApi.md  RpmeApi.md  SurveysApi.md  ViewExtendedMonthlyAggregatedPrice.md  ViewExtendedMonthlyAggregatedPricePagedResult.md  WeeklyAggregatedPrice.md  XlsFormsApi.md
generate/: README.md  exchange.json  generate.sh  swagger-7.0.0.json  swagger.yaml
test/: test_bad_request_dto.py  test_cari_adm0_values_dto.py  test_cari_adm0_values_dto_paged_result.py  test_cari_adm1_values_dto.py  test_cari_adm1_values_dto_paged_result.py  test_categories_and_indicators_dto.py  test_commodities_api.py  test_commodity_dto.py  test_commodity_price_dto.py  test_commodity_processing_dto.py  test_commodity_quality_dto.py  test_commodity_units_api.py  test_currency_api.py  test_currency_dto.py  test_economic_data_api.py  test_economic_data_dto.py  test_economic_indicator_property.py  test_economic_indicator_property_paged_result.py  test_extended_alps_value_dto.py  test_extended_alps_value_dto_paged_result.py  test_feature.py  test_geometry.py  test_global_outlook_api.py  test_global_outlook_api_dto.py  test_global_outlook_country_api_dto.py  test_global_outlook_regional_api_dto.py  test_household_survey_list_dto.py  test_household_survey_list_dto_paged_result.py  test_hunger_hot_spot_data_dto.py  test_hunger_hot_spot_data_dto_paged_result.py  test_hunger_hotspot_api.py  test_incubation_api.py  test_ipc_historical_datum_dto.py  test_ipc_historical_datum_dto_paged_result.py  test_ipcch_and_equivalent_peaks_dto.py  test_ipcch_and_equivalent_peaks_dto_paged_result.py  test_ipcch_api.py  test_ipcch_base_dto.py  test_ipcch_base_dto_paged_result.py  test_ipcch_peaks_dto.py  (+40 more)
(+68 files in other folders)
