[project]
name = "data_bridges_client"
version = "7.0.1"
description = "VAM-Data-Bridges"
authors = [{ name = "VAM-INFO", email = "wfp.vaminfo@wfp.org" }]
requires-python = ">=3.9"
readme = "README.md"
keywords = [
    "OpenAPI",
    "OpenAPI-Generator",
    "VAM-Data-Bridges",
]
dependencies = [
    "urllib3 (>=2.1.0,<3.0.0)",
    "python-dateutil (>=2.8.2)",
    "pydantic (>=2.11)",
    "typing-extensions (>=4.7.1)",
]

[project.urls]
Repository = "https://github.com/WFP-VAM/DataBridgesAPI"

[dependency-groups]
dev = [
    "pytest>= 7.2.1",
    "pytest-cov>= 2.8.1",
    "tox>= 3.9.0",
    "flake8>= 4.0.0",
    "types-python-dateutil>= 2.8.19.14",
    "mypy>= 1.5",
    "isort",
    "black", 
    "ruff",
]

[tool.uv]
default-groups = "all"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "data-bridges-client"
version = "7.0.0"
description = "VAM-Data-Bridges"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Affero GPL 3.0" }
authors = [
  { name = "VAM-INFO", email = "wfp.economicanalysis@wfp.org" },
]
keywords = ["OpenAPI", "OpenAPI-Generator", "VAM-Data-Bridges"]
dependencies = [
  "urllib3 >= 1.25.3, < 2.1.0",
  "python-dateutil >= 2.8.2",
  "pydantic >= 2",
  "typing-extensions >= 4.7.1",
  "httpx >= 0.23",
]

[project.optional-dependencies]
test = [
  "pytest~=7.1.3",
  "pytest-cov>=2.8.1",
  "pytest-randomly>=3.12.0",
]
dev = [
  "pytest>=7.2.1",
  "tox>=3.9.0",
  "flake8>=4.0.0",
  "types-python-dateutil>=2.8.19.14",
  "mypy==1.4.1",
]

[project.urls]
Repository = "https://github.com/WFP-VAM/DataBridgesAPI"

[tool.setuptools.packages.find]
exclude = ["test", "tests"]

[tool.setuptools.package-data]
data_bridges_client = ["py.typed"]

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

[tool.setuptools.packages.find]
exclude = ["generate"]

[tool.mypy]
files = [
  "data_bridges_client",
  #"test",  # auto-generated tests
  "tests", # hand-written tests
]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true

## Strongly recommend enabling this one as soon as you can
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

### These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#
### This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true
#
### This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "data_bridges_client.configuration",
]
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
